--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinations \n",
+    "def number_of_destinations ():\n",
+    "    \n",
     "    pass"
    ]
   },
