--- a/index.ipynb
+++ b/index.ipynb
@@ -59,6 +59,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations ():\n",
     "    amount = len(travel_destinations)\n",
+    "    return amount\n",
     "    pass"
    ]
   },
