Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations[0]"
+    "    first = travel_destinations[0]\n",
+    "    return first"
    ]
   },
   {
