--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n",
-    "def favorite_destination():\n",
-    "    mad = print(travel_destinations[-1])\n",
-    "    return mad\n",
-    "    pass"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
    ]
   },
   {
