Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def fa"
    ]
   },
   {
