--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.apped"
+    "    travel_destinations.append('madagascar')"
    ]
   },
   {
