--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    "
+    "    fav = travel_destinations[-1]"
    ]
   },
   {
