Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,8 +214,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalized_countries():\n",
-    "    cap = []"
+    "def "
    ]
   },
   {
