Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def "
+    "cap_countrie"
    ]
   },
   {
