--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "cap_countries = []\n",
-    "de"
+    "def capitalize_countries"
    ]
   },
   {
