--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "cap_countries = []\n",
-    "def capitalize_countries"
+    "def capitalize_countries ():\n",
+    "    for "
    ]
   },
   {
