--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "cap_countries = []\n",
     "def capitalize_countries ():\n",
-    "    for "
+    "    for destinations in travel"
    ]
   },
   {
