--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "cap_countries = []\n",
     "def capitalize_countries ():\n",
-    "    for destinations in travel"
+    "    for destinations in travel_destinations:\n",
+    "        "
    ]
   },
   {
