Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "cap_countries = []\n",
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
-    "        destinations"
+    "        destinations.title()"
    ]
   },
   {
