Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
     "        cap_countries = destinations.title()\n",
-    "        \n",
+    "    return cap_coun    \n",
     "    "
    ]
   },
