Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
-    "        cap_countries = destinations.title()\n",
+    "        cap_countries = destinations.title(travel)\n",
     "    return cap_countries    \n",
     "    "
    ]
