Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
-    "        cap_countries = destinations.title(travel_destinations)\n",
+    "        cap_countries = destinations.title()\n",
     "    return cap_countries    \n",
     "    "
    ]
