--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "cap\n",
+    "capitalize_countries = []\n",
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
     "        cap_countries = destinations.title()\n",
