--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "capitalize_countries = []\n",
     "def capitalize_countries ():\n",
     "    for destinations in travel_destinations:\n",
-    "        cap_countries = destinations.title()\n",
+    "        capitalizedountries = destinations.title()\n",
     "    return cap_countries    \n",
     "    "
    ]
