Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,6 +216,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "\n",
     "def capitalize_countries ():\n",
+    "    capitalized_coun\n",
     "    for destinations in travel_destinations:\n",
     "        capitalized_countries.append (destinations.title())\n",
     "    return cap_countries    \n",
