Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
     "    capitalized_countries = []\n",
     "    for destinations in travel_destinations:\n",
     "        capitalized_countries.append (destinations.title())\n",
-    "    return cap_countries    \n",
+    "    return capitalized_countries    \n",
     "    "
    ]
   },
